@@ -7,7 +7,8 @@
             [net.molequedeideias.inga :as inga]
             [com.wsscode.pathom.core :as p]
             [com.wsscode.pathom.connect :as pc]
-            [hiccup2.core :as h])
+            [hiccup2.core :as h]
+            [ring.util.mime-type :as mime])
   (:import (org.eclipse.jetty.servlet ServletContextHandler)
            (org.eclipse.jetty.server.handler.gzip GzipHandler)))
 
@@ -18,6 +19,45 @@
     (.setExcludedAgentPatterns gzip-handler (make-array String 0))
     (.setGzipHandler context gzip-handler))
   context)
+
+(def show (letfn [(show [x]
+                    (cond
+                      (map? x) (list
+                                 "{"
+                                 [:table
+                                  [:tbody
+                                   (for [[k v] x]
+                                     [:tr
+                                      [:th (show k)]
+                                      [:td (show v)]])]]
+                                 "}")
+                      (set? x) (list
+                                 "#{"
+                                 [:ul
+                                  (for [el x]
+                                    [:li (show el)])]
+                                 "}")
+                      (coll? x) (list
+                                  "["
+                                  [:ol
+                                   {:start 0}
+                                   (for [el x]
+                                     [:li (show el)])]
+                                  "]")
+                      (keyword? x) [:code
+                                    {:style {:background-color "fuchsia"}}
+                                    (pr-str x)]
+                      (string? x) [:code
+                                   {:style {:background-color "lightgreen"}}
+                                   (pr-str x)]
+                      (number? x) [:code
+                                   {:style {:background-color "lightblue"}}
+                                   (pr-str x)]
+                      (nil? x) [:code
+                                {:style {:background-color "blue"}}
+                                (pr-str x)]
+                      :else [:code (pr-str x)]))]
+            show))
 
 (defonce state (atom nil))
 (defn service
@@ -73,16 +113,58 @@
                                               :as   ctx}]
                                           (if (http/response? response)
                                             ctx
-                                            (assoc ctx :response {:body    (binding [*print-namespace-maps* false]
-                                                                             (with-out-str (pprint/pprint (assoc request
-                                                                                                            :System/getenv (System/getenv)))))
-                                                                  :headers {"Content-Type" "text/plain"}
+                                            (assoc ctx :response {:body    (str (h/html
+                                                                                  {:mode :html}
+                                                                                  (h/raw "<!DOCTYPE html>")
+                                                                                  [:html
+                                                                                   [:head [:title "404"]]
+                                                                                   [:body
+                                                                                    (show (assoc request
+                                                                                            :bar [{:foo 1
+                                                                                                   :car #{2 5}}]
+                                                                                            :System/getenv (into {} (System/getenv))))]]))
+                                                                  :headers {"Content-Type" (mime/default-mime-types "html")}
                                                                   :status  404}))))}
 
         http/default-interceptors)))
 
 (defn -main
   [& opts]
+  (comment
+    {"LEIN_VERSION"               "2.9.1",
+     "HOME"                       "/app",
+     "JAVA_OPTS"                  "-Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8 ",
+     "LEIN_HOME"                  "/app/.lein",
+     "DYNO"                       "web.1",
+     "LEIN_NO_DEV"                "yes",
+     "PKG_CONFIG_PATH"            "/app/.heroku/apt/usr/lib/x86_64-linux-gnu/pkgconfig:/app/.heroku/apt/usr/lib/i386-linux-gnu/pkgconfig:/app/.heroku/apt/usr/lib/pkgconfig:",
+     "LIBRARY_PATH"               "/app/.heroku/apt/usr/lib/x86_64-linux-gnu:/app/.heroku/apt/usr/lib/i386-linux-gnu:/app/.heroku/apt/usr/lib:",
+     "JVM_OPTS"                   "-Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8 ",
+     "JDBC_DATABASE_USERNAME"     "xxxx",
+     "JDBC_DATABASE_PASSWORD"     "xxx",
+     "DATABASE_URL"               "postgres://xxx:xxxx@ec2.compute-1.amazonaws.com:5432/xxxx",
+     "PATH"                       "/app/.heroku/apt/usr/bin:/app/.heroku/bin:/app/.jdk/bin:/app/.heroku/nodejs/bin:/app/.heroku/clj/bin:/app/.jdk/bin:/app/.lein/bin:/usr/local/bin:/usr/bin:/bin",
+     "INCLUDE_PATH"               "/app/.heroku/apt/usr/include:",
+     "RING_ENV"                   "production",
+     "TRAMPOLINE_FILE"            "/tmp/lein-trampoline-tUdH5XuQw1QP9",
+     "CPATH"                      "/app/.heroku/apt/usr/include:",
+     "CPPPATH"                    "/app/.heroku/apt/usr/include:",
+     "JDBC_DATABASE_URL"          "jdbc:postgresql://ec2-52-201-55-4.compute-1.amazonaws.com:5432/d7b6b4vrcit6gd?user=xxx&password=xxx&sslmode=require",
+     "CLASSPATH"                  "/app/.lein/self-installs/leiningen-2.9.1-standalone.jar",
+     "JAVA_HOME"                  "/app/.jdk",
+     "SCREENDIR"                  "/app/.heroku/apt/var/run/screen",
+     "PWD"                        "/app",
+     "JAVA_TOOL_OPTIONS"          "-Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8 ",
+     "LEIN_JAVA_CMD"              "java",
+     "LD_LIBRARY_PATH"            "/app/.jdk/jre/lib/amd64/server:/app/.jdk/jre/lib/amd64:/app/.jdk/jre/../lib/amd64:/app/.heroku/apt/usr/lib/x86_64-linux-gnu:/app/.heroku/apt/usr/lib/i386-linux-gnu:/app/.heroku/apt/usr/lib:/app/.jdk/jre/lib/amd64/server:",
+     "SPRING_DATASOURCE_USERNAME" "xxx",
+     "SPRING_DATASOURCE_URL"      "jdbc:postgresql://ec2.compute-1.amazonaws.com:5432/xxx?user=xxx&password=xxx&sslmode=require",
+     "LEIN_JVM_OPTS"              "-Xverify:none -XX:+TieredCompilation -XX:TieredStopAtLevel=1",
+     "SHLVL"                      "1",
+     "PYTHONPATH"                 "/app/.heroku/apt/usr/lib/python2.7/dist-packages",
+     "SPRING_DATASOURCE_PASSWORD" "xxxx",
+     "PORT"                       "13340",
+     "TELEGRAM_API_TOKEN"         "222:xxxx"})
   (let [port (edn/read-string (System/getenv "PORT"))]
     (swap! state (fn [st]
                    (when st
